--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,4 +5,15 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
            version="4.0">
 
+    <servlet>
+        <servlet-name>Servlet</servlet-name>
+        <servlet-class>controller.Servlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/css/*</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
