--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,12 @@
         <error-code>404</error-code>
         <location>/error/404.jsp</location>
     </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>502</error-code>
+        <location>/error/502.jsp</location>
+    </error-page>
 </web-app>
